--- a/css/details.css
+++ b/css/details.css
@@ -1,15 +1,20 @@
+body {
+  background-color: black;
+  color: wheat;
+}
+
 main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   column-gap: 10px;
   row-gap: 10px;
-  margin-top: 6.4rem;
+  margin-top: 8rem;
 }
 
 #cards {
   padding: 10px;
-  border: solid black 5px;
+  border: solid wheat 5px;
   width: 400px;
   text-align: center;
 }
